Completed Database Connection finalization